--- a/src/html/admin-add.html
+++ b/src/html/admin-add.html
@@ -10,9 +10,10 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/font.css">
     <link rel="stylesheet" href="../css/xadmin.css">
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="../css/admin.css">
+    <!-- <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../js/xadmin.js"></script>
+    <script type="text/javascript" src="../js/xadmin.js"></script> -->
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
       <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -32,7 +33,8 @@
                   autocomplete="off" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
-                  <span class="x-red">*</span>将会成为您唯一的登入名
+                  <span class="x-red">*</span>
+                  <span id="userInfor">登录名以字母开头，3-20位</span>
               </div>
           </div>
           <div class="layui-form-item">
@@ -44,8 +46,11 @@
                   autocomplete="off" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
-                  <span class="x-red">*</span>将会成为您唯一的登入名
+                  <span id="telInfor"></span>
               </div>
+              <!-- <div class="layui-form-mid layui-word-aux">
+                  <span class="x-red">*</span>将会成为您唯一的登入名
+              </div> -->
           </div>
           <div class="layui-form-item">
               <label for="L_email" class="layui-form-label">
@@ -56,15 +61,21 @@
                   autocomplete="off" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
-                  <span class="x-red">*</span>
+                  <span id="emailInfor"></span>
               </div>
+              <!-- <div class="layui-form-mid layui-word-aux">
+                  <span class="x-red">*</span>
+              </div> -->
           </div>
-          <div class="layui-form-item">
+          <div class="">
               <label class="layui-form-label"><span class="x-red">*</span>角色</label>
-              <div class="layui-input-block">
-                <input type="checkbox" name="like1[write]" lay-skin="primary" title="超级管理员" checked="">
-                <input type="checkbox" name="like1[read]" lay-skin="primary" title="编辑人员">
-                <input type="checkbox" name="like1[write]" lay-skin="primary" title="宣传人员" checked="">
+              <div class="" id="role">
+                <!-- <input type="radio" name="like1[write]" lay-skin="primary" title="超级管理员" >
+                <input type="radio" name="like1[write]" lay-skin="primary" title="编辑人员">
+                <input type="radio" name="like1[write]" lay-skin="primary" title="宣传人员" > -->
+                <label><input type="radio" name="like" data-names="超级管理员">超级管理员</label>
+                <label><input type="radio" name="like" data-names="编辑人员">编辑人员</label>
+                <label><input type="radio" name="like" data-names="宣传人员">宣传人员</label>
               </div>
           </div>
           <div class="layui-form-item">
@@ -76,7 +87,8 @@
                   autocomplete="off" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
-                  6到16个字符
+                  <span class="x-red">*</span>
+                  <sapn id="pswInfor">6-18位字母、数字或下划线组成</sapn>
               </div>
           </div>
           <div class="layui-form-item">
@@ -87,16 +99,28 @@
                   <input type="password" id="L_repass" name="repass" required="" lay-verify="repass"
                   autocomplete="off" class="layui-input">
               </div>
+              <div class="layui-form-mid layui-word-aux">
+                  <sapn id="conInfor"></sapn>
+              </div>
           </div>
           <div class="layui-form-item">
               <label for="L_repass" class="layui-form-label">
               </label>
-              <button  class="layui-btn" lay-filter="add" lay-submit="">
+              <!-- <input type="button" id="addBtn" class="layui-btn" lay-filter="add" value="增加"/> -->
+              <button  class="layui-btn" id="addBtn" lay-filter="add" lay-submit="">
                   增加
               </button>
           </div>
       </form>
     </div>
+
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../lib/jquery-1.10.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../js/xadmin.js"></script>
+    <script type="text/javascript" src="../lib/common.js"></script>
+    <script type="text/javascript" src="../js/myadmin.js"></script>
+
     <script>
         layui.use(['form','layer'], function(){
             $ = layui.jquery;
@@ -104,21 +128,21 @@
           ,layer = layui.layer;
         
           //自定义验证规则
-          form.verify({
-            nikename: function(value){
-              if(value.length < 5){
-                return '昵称至少得5个字符啊';
-              }
-            }
-            ,pass: [/(.+){6,12}$/, '密码必须6到12位']
-            ,repass: function(value){
-                if($('#L_pass').val()!=$('#L_repass').val()){
-                    return '两次密码不一致';
-                }
-            }
-          });
+          // form.verify({
+          //   nikename: function(value){
+          //     if(value.length < 5){
+          //       return '昵称至少得5个字符啊';
+          //     }
+          //   }
+          //   ,pass: [/(.+){6,12}$/, '密码必须6到12位']
+          //   ,repass: function(value){
+          //       if($('#L_pass').val()!=$('#L_repass').val()){
+          //           return '两次密码不一致';
+          //       }
+          //   }
+          // });
 
-          //监听提交
+          // 监听提交
           form.on('submit(add)', function(data){
             console.log(data);
             //发异步，把数据提交给php
