--- a/src/html/admin-add.html
+++ b/src/html/admin-add.html
@@ -29,7 +29,7 @@
                   <span class="x-red">*</span>登录名
               </label>
 					<div class="layui-input-inline">
-						<input type="text" id="username" name="username" required="" lay-verify="required" autocomplete="off" class="layui-input">
+						<input type="text" id="username" name="username" required="" lay-verify="username" autocomplete="off" class="layui-input">
 					</div>
 					<div class="layui-form-mid layui-word-aux">
 						<span class="x-red">*</span>
@@ -73,6 +73,9 @@
 						<label><input type="radio" name="like" data-names="超级管理员">超级管理员</label>
 						<label><input type="radio" name="like" data-names="编辑人员">编辑人员</label>
 						<label><input type="radio" name="like" data-names="宣传人员">宣传人员</label>
+						<div class="layui-form-mid layui-word-aux">
+						<sapn id="roleInfor"></sapn>
+					</div>
 					</div>
 				</div>
 				<div class="layui-form-item">
@@ -102,9 +105,9 @@
 					<label for="L_repass" class="layui-form-label">
               </label>
 					<!-- <input type="button" id="addBtn" class="layui-btn" lay-filter="add" value="增加"/> -->
-					<button class="layui-btn" id="addBtn" lay-filter="add" lay-submit="">
-                  增加
-              </button>
+					<input type="button" class="layui-btn" id="addBtn" lay-filter="add" lay-submit="" value="增加">
+                  
+              <!-- </button> -->
 				</div>
 			</form>
 		</div>
@@ -121,36 +124,6 @@
 				$ = layui.jquery;
 				var form = layui.form,
 					layer = layui.layer;
-
-				//自定义验证规则
-				// form.verify({
-				//   nikename: function(value){
-				//     if(value.length < 5){
-				//       return '昵称至少得5个字符啊';
-				//     }
-				//   }
-				//   ,pass: [/(.+){6,12}$/, '密码必须6到12位']
-				//   ,repass: function(value){
-				//       if($('#L_pass').val()!=$('#L_repass').val()){
-				//           return '两次密码不一致';
-				//       }
-				//   }
-				// });
-
-				// 监听提交
-				form.on('submit(add)', function(data) {
-					console.log(data);
-					//发异步，把数据提交给php
-					layer.alert("增加成功", {
-						icon: 6
-					}, function() {
-						// 获得frame索引
-						var index = parent.layer.getFrameIndex(window.name);
-						//关闭当前frame
-						parent.layer.close(index);
-					});
-					return false;
-				});
 
 			});
 		</script>
