--- a/src/html/admin-list.html
+++ b/src/html/admin-list.html
@@ -11,25 +11,16 @@
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/admin.css">
-		<!-- <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../lib/jquery-1.10.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../js/xadmin.js"></script>
-    <script type="text/javascript" src="../js/myadmin.js"></script> -->
-		<!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-		<!--[if lt IE 9]>
-      <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-      <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 	</head>
 
 	<body>
 		<div class="x-nav">
 			<span class="layui-breadcrumb">
-        <a href="">首页</a>
-        <a href="">演示</a>
+        <a id="home" href="javascript:;">首页</a>
+        <a href="">管理员管理</a>
         <a>
-          <cite>导航元素</cite></a>
+          <cite>管理员列表</cite>
+        </a>
       </span>
 			<a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
 				<i class="layui-icon" style="line-height:30px">ဂ</i></a>
@@ -39,13 +30,13 @@
 				<form class="layui-form layui-col-md12 x-so">
 					<!-- <input class="layui-input" placeholder="开始日" name="start" id="start">
           <input class="layui-input" placeholder="截止日" name="end" id="end"> -->
-					<input type="text" name="username" placeholder="请输入用户名" autocomplete="off" class="layui-input">
-					<button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
+					<input type="text" name="username" placeholder="请输入用户名" autocomplete="off" class="layui-input valName">
+					<button id="search" class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
 				</form>
 			</div>
 			<xblock>
 				<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-				<button class="layui-btn" onclick="x_admin_show('添加用户','./admin-add.html')"><i class="layui-icon"></i>添加</button>
+				<button class="layui-btn" onclick="x_admin_show('添加管理员','./admin-add.html')"><i class="layui-icon"></i>添加</button>
 				<span class="x-right totalPage" style="line-height:40px">共有数据：88 条</span>
 			</xblock>
 			<table class="layui-table">
@@ -96,9 +87,9 @@
 					<a class="prev" id="prev" href="javascript:;">&lt;&lt;</a>
 					<p id="pagenum">
 						<!-- <a class="num" href="">1</a>
-            <a class="current">2</a>
-            <a class="num" href="">3</a>
-            <a class="num" href="">489</a> -->
+                    <a class="current">2</a>
+                    <a class="num" href="">3</a>
+                    <a class="num" href="">489</a> -->
 					</p>
 					<a class="next" id="next" href="javascript:;">&gt;&gt;</a>
 				</div>
@@ -114,9 +105,12 @@
 		<script type="text/javascript" src="../js/myadmin.js"></script>
 
 		<script>
+			let layer;
 			layui.use('laydate', function() {
 				var laydate = layui.laydate;
-
+				$ = layui.jquery;
+				var form = layui.form,
+					layer = layui.layer;
 				//执行一个laydate实例
 				laydate.render({
 					elem: '#start' //指定元素
@@ -128,30 +122,80 @@
 				});
 			});
 
+			// $('#home').click(function(){
+			//   if($('.layui-tab-title .home')){
+			//       alert('yes');
+			//   }
+
+			//   console.log($('.layui-tab-title .home'));
+			//     $('.layui-tab-title .home').addClass('layui-this');
+			//     $('.layui-tab-title .home').next().removeClass('layui-this');
+			// })
+
+			// for(var i=0;i<$('.status').size();i++){
+			//     if($('.status').eq(i).title=='已启用'){
+			//         $('.status').eq(i).find('i').html('&#xe601;');
+			//         $('.status').eq(i).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
+			//     }else{
+			//         $('.status').eq(i).find('i').html('&#xe62f;');
+
+			//         $('.status').eq(i).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
+			//     }
+			// }
+
 			/*用户-停用*/
 			function member_stop(obj, id) {
-				layer.confirm('确认要停用吗？', function(index) {
+				var _id = $(obj).parent().parent().data('id');
+				var thisStatus = '';
+				if($(obj).attr('title') == '已启用') {
+					thisStatus = '停用';
+				} else {
+					thisStatus = '启用';
+				}
 
-					if($(obj).attr('title') == '启用') {
+				layer.confirm('确定要' + thisStatus + '吗？', function(index) {
 
-						//发异步把用户状态进行更改
-						$(obj).attr('title', '停用')
-						$(obj).find('i').html('&#xe62f;');
+					if($(obj).attr('title') == '已启用') {
+						$.ajax({
+							type: 'get',
+							url: 'http://localhost:3008/addAdmin/updateStatus',
+							// url: '/addAdmin/updateStatus',
+							async: true,
+							data: {
+								'_id': _id,
+								'status': '已停用'
+							},
+							success: function(str) {
+								console.log(str);
+								$(obj).attr('title', '已停用')
+								$(obj).find('i').html('&#xe62f;');
 
-						$(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
-						layer.msg('已停用!', {
-							icon: 5,
-							time: 1000
+								$(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
+								layer.msg('已停用!', {
+									icon: 5,
+									time: 1000
+								});
+							}
 						});
-
 					} else {
-						$(obj).attr('title', '启用')
-						$(obj).find('i').html('&#xe601;');
+						$.ajax({
+							type: 'get',
+							url: 'http://localhost:3008/addAdmin/updateStatus',
+							async: true,
+							data: {
+								'_id': _id,
+								'status': '已启用'
+							},
+							success: function(str) {
+								$(obj).attr('title', '已启用')
+								$(obj).find('i').html('&#xe601;');
 
-						$(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
-						layer.msg('已启用!', {
-							icon: 5,
-							time: 1000
+								$(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
+								layer.msg('已启用!', {
+									icon: 6,
+									time: 1000
+								});
+							}
 						});
 					}
 
@@ -160,14 +204,14 @@
 
 			/*用户-删除*/
 			function member_del(obj, id) {
-				layer.confirm('确认要删除吗？', function(index) {
+				layer.confirm('确定要删除吗？', function(index) {
 					//发异步删除数据
 					var _id = $(obj).parents("tr").find('.adminId').text();
-					// _id='ObjectId("'+_id+'")';
 
 					$.ajax({
 						type: 'get',
-						url: '/addAdmin/delete',
+						url: 'http://localhost:3008/addAdmin/delete',
+						// url: '/addAdmin/delete',
 						async: true,
 						data: {
 							'_id': _id
@@ -182,48 +226,62 @@
 						icon: 1,
 						time: 1000
 					});
+					window.location.reload();
 				});
 			}
 
-			console.log($('#adminList'));
-			var ispick = true;
 			$('#adminList').on('click', '.pick', function() {
-				for(var i = 0; i < $('.pick').size(); i++) {
-					if(ispick) {
-						$(this).addClass('layui-form-checked');
-						console.log($(this));
-						// ispick=false;
-					} else {
-						$(this).removeClass('layui-form-checked');
-						// ispick=true;
-					}
-					ispick = !ispick;
+				console.log($(this));
+				//				for(var i = 0; i < $('.pick').size(); i++) {
+				if(!$(this).hasClass('layui-form-checked')) {
+					$(this).addClass('layui-form-checked');
+					console.log($(this));
+				} else {
+					$(this).removeClass('layui-form-checked');
 				}
+				//				}
 
 			})
 
 			function delAll(argument) {
 
 				var data = tableCheck.getData();
+				var delEle = $('#adminList .layui-form-checked');
+				var _id = [];
 
-				var _id =
+				for(var i = 0; i < delEle.size(); i++) {
+					_id.push(delEle.eq(i).parent().parent().data('id'));
+				}
 
-					layer.confirm('确认要删除吗？' + data, function(index) {
+				console.log(_id);
 
-						//捉到所有被选中的，发异步进行删除
-						layer.msg('删除成功', {
-							icon: 1
+				layer.confirm('确定要删除吗？', function(index) {
+					for(var i = 0; i < _id.length; i++) {
+						$.ajax({
+							type: 'get',
+							url: 'http://localhost:3008/addAdmin/delete',
+							// url: '/addAdmin/delete',
+							async: true,
+							data: {
+								'_id': _id[i]
+							},
+							success: (str) => {
+								console.log(str);
+							}
 						});
-						$(".layui-form-checked").not('.header').parents('tr').remove();
+					}
+					//捉到所有被选中的，发异步进行删除
+					layer.msg('删除成功', {
+						icon: 1
 					});
+					window.location.reload();
+
+					$(".layui-form-checked").not('.header').parents('tr').remove();
+				});
 			}
+			// });
 		</script>
-		<!-- <script>var _hmt = _hmt || []; (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-      })();</script> -->
+
 	</body>
 
 </html>
