--- a/src/html/admin-add.html
+++ b/src/html/admin-add.html
@@ -11,14 +11,6 @@
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/admin.css">
-		<!-- <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../js/xadmin.js"></script> -->
-		<!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-		<!--[if lt IE 9]>
-      <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-      <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 	</head>
 
 	<body>
@@ -46,9 +38,7 @@
 					<div class="layui-form-mid layui-word-aux">
 						<span id="telInfor"></span>
 					</div>
-					<!-- <div class="layui-form-mid layui-word-aux">
-                  <span class="x-red">*</span>将会成为您唯一的登入名
-              </div> -->
+					
 				</div>
 				<div class="layui-form-item">
 					<label for="L_email" class="layui-form-label">
@@ -127,7 +117,7 @@
 
 			});
 		</script>
-		<script>
+		<!-- <script>
 			var _hmt = _hmt || [];
 			(function() {
 				var hm = document.createElement("script");
@@ -135,7 +125,7 @@
 				var s = document.getElementsByTagName("script")[0];
 				s.parentNode.insertBefore(hm, s);
 			})();
-		</script>
+		</script> -->
 	</body>
 
 </html>
