--- a/src/html/admin-edit.html
+++ b/src/html/admin-edit.html
@@ -12,14 +12,6 @@
     <link rel="stylesheet" href="../css/xadmin.css">
     <link rel="stylesheet" href="../css/admin.css">
     <link rel="stylesheet" href="../css/admin.css">
-    <!--  <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../js/xadmin.js"></script> -->
-    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-      <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -136,7 +128,8 @@
             if (strs) {
                 $.ajax({
                     type: 'get',
-                    url: '/addAdmin/checkname',
+                    url: 'http://localhost:3008/addAdmin/checkname',
+                    // url: '/addAdmin/checkname',
                     async: true,
                     data: {
                         'username': strs
@@ -201,7 +194,8 @@
                 if (isok1) {
                     $.ajax({
                         type: 'post',
-                        url: '/addAdmin/update',
+                        url: 'http://localhost:3008/addAdmin/update',
+                        // url: '/addAdmin/update',
                         async: true,
                         data: {
                             'username': $('#username2').val(),
@@ -219,6 +213,8 @@
                             }, function() {
                                 // 获得frame索引
                                 var index = parent.layer.getFrameIndex(window.name);
+                                
+							    window.parent.location.reload();//刷新父页面
                                 //关闭当前frame
                                 parent.layer.close(index);
                             });
@@ -233,7 +229,7 @@
         });
     };
     </script>
-    <script>
+    <!-- <script>
     var _hmt = _hmt || [];
     (function() {
         var hm = document.createElement("script");
@@ -241,7 +237,7 @@
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
-    </script>
+    </script> -->
 </body>
 
 </html>
