--- a/src/html/admin-edit.html
+++ b/src/html/admin-edit.html
@@ -1,243 +1,214 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8">
+		<title>欢迎页面-X-admin2.0</title>
+		<meta name="renderer" content="webkit">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="stylesheet" href="../css/font.css">
+		<link rel="stylesheet" href="../css/xadmin.css">
+		<link rel="stylesheet" href="../css/admin.css">
+		<link rel="stylesheet" href="../css/admin.css">
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>欢迎页面-X-admin2.0</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/font.css">
-    <link rel="stylesheet" href="../css/xadmin.css">
-    <link rel="stylesheet" href="../css/admin.css">
-    <link rel="stylesheet" href="../css/admin.css">
-</head>
-
-<body>
-    <div class="x-body">
-        <form class="layui-form">
-            <div class="layui-form-item">
-                <label for="username" class="layui-form-label">
+	<body>
+		<div class="x-body">
+			<form class="layui-form">
+				<div class="layui-form-item">
+					<label for="username" class="layui-form-label">
                     登录名
                 </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="username2" name="username2" lay-verify="username" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    <span class="x-red">*</span>
-                    <span id="userInfor">登录名以字母开头，3-20位</span>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="phone" class="layui-form-label">
+					<div class="layui-input-inline">
+						<input type="text" id="username2" name="username2" lay-verify="username" autocomplete="off" class="layui-input">
+					</div>
+					<div class="layui-form-mid layui-word-aux">
+						<span class="x-red">*</span>
+						<span id="userInfor">登录名以字母开头，3-20位</span>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label for="phone" class="layui-form-label">
                     手机
                 </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="phone2" name="phone" lay-verify="phone" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    <span id="telInfor"></span>
-                </div>
-                <!-- <div class="layui-form-mid layui-word-aux">
-                  <span class="x-red">*</span>将会成为您唯一的登入名
-              </div> -->
-            </div>
-            <div class="layui-form-item">
-                <label for="L_email" class="layui-form-label">
+					<div class="layui-input-inline">
+						<input type="text" id="phone2" name="phone" lay-verify="phone" autocomplete="off" class="layui-input">
+					</div>
+					<div class="layui-form-mid layui-word-aux">
+						<span id="telInfor"></span>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label for="L_email" class="layui-form-label">
                     邮箱
                 </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="L_email2" name="email" lay-verify="email" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    <span id="emailInfor"></span>
-                </div>
-                <!-- <div class="layui-form-mid layui-word-aux">
-                  <span class="x-red">*</span>
-              </div> -->
-            </div>
-            <div class="">
-                <label class="layui-form-label">角色</label>
-                <div class="role2" id="role">
-                    <!-- <input type="radio" name="like1[write]" lay-skin="primary" title="超级管理员" >
-                <input type="radio" name="like1[write]" lay-skin="primary" title="编辑人员">
-                <input type="radio" name="like1[write]" lay-skin="primary" title="宣传人员" > -->
-                    <label><input type="radio" name="like" data-names="超级管理员">超级管理员</label>
-                    <label><input type="radio" name="like" data-names="编辑人员">编辑人员</label>
-                    <label><input type="radio" name="like" data-names="宣传人员">宣传人员</label>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="L_pass" class="layui-form-label">
-                    密码
+					<div class="layui-input-inline">
+						<input type="text" id="L_email2" name="email" lay-verify="email" autocomplete="off" class="layui-input">
+					</div>
+					<div class="layui-form-mid layui-word-aux">
+						<span id="emailInfor"></span>
+					</div>
+				</div>
+				<div class="">
+					<label class="layui-form-label">角色</label>
+					<div class="role2" id="role">
+						<label><input type="radio" name="like" data-names="超级管理员">超级管理员</label>
+						<label><input type="radio" name="like" data-names="编辑人员">编辑人员</label>
+						<label><input type="radio" name="like" data-names="宣传人员">宣传人员</label>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label for="L_pass" class="layui-form-label">
+                   	 密码
                 </label>
-                <div class="layui-input-inline">
-                    <input type="password" id="L_pass2" name="pass" lay-verify="pass" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    <span class="x-red">*</span>
-                    <sapn id="pswInfor">6-18位字母、数字或下划线组成</sapn>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="L_repass" class="layui-form-label">
-                    确认密码
+					<div class="layui-input-inline">
+						<input type="password" id="L_pass2" name="pass" lay-verify="pass" autocomplete="off" class="layui-input">
+					</div>
+					<div class="layui-form-mid layui-word-aux">
+						<span class="x-red">*</span>
+						<sapn id="pswInfor">6-18位字母、数字或下划线组成</sapn>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label for="L_repass" class="layui-form-label">
+                    	确认密码
                 </label>
-                <div class="layui-input-inline">
-                    <input type="password" id="L_repass2" name="repass" lay-verify="repass" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    <sapn id="conInfor2"></sapn>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="L_repass" class="layui-form-label">
-                </label>
-                <!-- <input type="button" id="addBtn" class="layui-btn" lay-filter="add" value="增加"/> -->
-                <input type="button" class="layui-btn" id="editBtn" lay-filter="add" lay-submit="" value="更新">
-                <!-- 更新 -->
-                <!-- </button> -->
-            </div>
-        </form>
-    </div>
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../lib/jquery-1.10.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../js/xadmin.js"></script>
-    <script type="text/javascript" src="../lib/common.js"></script>
-    <!-- <script type="text/javascript" src="../js/myadmin.js"></script> -->
-    <script>
-    var renderdata = '';
-    if (Cookie.get('data')) {
-        renderdata = Cookie.get('data');
-        renderdata = JSON.parse(renderdata);
+					<div class="layui-input-inline">
+						<input type="password" id="L_repass2" name="repass" lay-verify="repass" autocomplete="off" class="layui-input">
+					</div>
+					<div class="layui-form-mid layui-word-aux">
+						<sapn id="conInfor2"></sapn>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label for="L_repass" class="layui-form-label">
+               </label>
+					<input type="button" class="layui-btn" id="editBtn" lay-filter="add" lay-submit="" value="更新">
+				</div>
+			</form>
+		</div>
+		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../lib/jquery-1.10.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
+		<script type="text/javascript" src="../js/xadmin.js"></script>
+		<script type="text/javascript" src="../lib/common.js"></script>
+		<script>
+			var renderdata = '';
+			if(Cookie.get('data')) {
+				renderdata = Cookie.get('data');
+				renderdata = JSON.parse(renderdata);
 
-        $('#username2').val(renderdata.username);
-        $('#phone2').val(renderdata.tel);
-        $('#L_email2').val(renderdata.email);
-        $('#L_pass2').val(renderdata.password);
-        $('#L_repass2').val(renderdata.password);
+				$('#username2').val(renderdata.username);
+				$('#phone2').val(renderdata.tel);
+				$('#L_email2').val(renderdata.email);
+				$('#L_pass2').val(renderdata.password);
+				$('#L_repass2').val(renderdata.password);
 
-        var isok1 = true;
-        $('#username2').blur(() => {
-            var val = $('#username2').val();
-            var strs = checkReg.trim(val);
-            console.log(strs);
+				var isok1 = true;
+				$('#username2').blur(() => {
+					var val = $('#username2').val();
+					var strs = checkReg.trim(val);
+					console.log(strs);
 
-            if (strs) {
-                $.ajax({
-                    type: 'get',
-                    url: 'http://localhost:3008/addAdmin/checkname',
-                    // url: '/addAdmin/checkname',
-                    async: true,
-                    data: {
-                        'username': strs
-                    },
-                    success: (str) => {
-                        if (str.code == '1') {
-                            if (renderdata.username == str.data.username) {
-                            	console.log(1);
-                                isok1 = true;
-                            } else {
-                            	console.log('same');
-                                $('#userInfor').html('该登录名已存在');
-                                $('#userInfor').css('color', 'red');
-                                isok1 = false;
-                            }
+					if(strs) {
+						$.ajax({
+							type: 'get',
+							url: 'http://localhost:3008/addAdmin/checkname',
+							// url: '/addAdmin/checkname',
+							async: true,
+							data: {
+								'username': strs
+							},
+							success: (str) => {
+								if(str.code == '1') {
+									if(renderdata.username == str.data.username) {
+										console.log(1);
+										isok1 = true;
+									} else {
+										console.log('same');
+										$('#userInfor').html('该登录名已存在');
+										$('#userInfor').css('color', 'red');
+										isok1 = false;
+									}
 
-                        } else {
-                            isok1 = true;
-                        }
-                    }
-                });
-            } else {
-                $('#userInfor').html('登录名不符合规则');
-                $('#userInfor').css('color', 'red');
-                isok1 = false;
-            }
-        });
+								} else {
+									isok1 = true;
+								}
+							}
+						});
+					} else {
+						$('#userInfor').html('登录名不符合规则');
+						$('#userInfor').css('color', 'red');
+						isok1 = false;
+					}
+				});
+				
+				var role = '';
+				$('#role input').eq(0).prop('checked', 'checked');
+				for(var i = 0; i < $('#role input').size(); i++) {
+					if($('#role input').eq(i).data('names') == renderdata.role) {
+						$('#role input').eq(i).prop('checked', 'checked');
+					}
+				}
 
-        // var isok6 = true;
-        var role = '';
-        $('#role input').eq(0).prop('checked', 'checked');
-        for (var i = 0; i < $('#role input').size(); i++) {
-            if ($('#role input').eq(i).data('names') == renderdata.role) {
-                $('#role input').eq(i).prop('checked', 'checked');
-                // var isok6 = true;
-            }
-        }
+				$('#role input').click(function() {
+					console.log($(this));
+					$(this).prop('checked', 'checked');
+					role = $(this).data('names');
+				});
 
-        $('#role input').click(function() {
-            console.log($(this));
-            $(this).prop('checked', 'checked');
-            role = $(this).data('names');
-        });
+				layui.use(['form', 'layer'], function() {
+					$ = layui.jquery;
+					var form = layui.form,
+						layer = layui.layer;
 
-        layui.use(['form', 'layer'], function() {
-            $ = layui.jquery;
-            var form = layui.form,
-                layer = layui.layer;
+					form.verify({
+						username: [/^[a-zA-Z][\w\-]{2,19}$/, '登录名以字母开头，3-20位'],
+						pass: [/(.+){6,12}$/, '密码必须6到12位'],
+						repass: function(value) {
+							if($('#L_pass').val() != $('#L_repass').val()) {
+								return '两次密码不一致';
+							}
+						}
+					});
 
-            form.verify({
-                username: [/^[a-zA-Z][\w\-]{2,19}$/, '登录名以字母开头，3-20位'],
-                pass: [/(.+){6,12}$/, '密码必须6到12位'],
-                repass: function(value) {
-                    if ($('#L_pass').val() != $('#L_repass').val()) {
-                        return '两次密码不一致';
-                    }
-                }
-            });
-
-            // 监听提交
-            form.on('submit(add)', function() {
-                if (isok1) {
-                    $.ajax({
-                        type: 'post',
-                        url: 'http://localhost:3008/addAdmin/update',
-                        // url: '/addAdmin/update',
-                        async: true,
-                        data: {
-                            'username': $('#username2').val(),
-                            'password': $('#L_pass2').val(),
-                            'role': role,
-                            'tel': $('#phone2').val(),
-                            'email': $('#L_email2').val(),
-                            '_id': renderdata._id
-                        },
-                        success: function(str) {
-                            console.log(str);
-                            // x_admin_show('','./admin-list.html');
-                            layer.alert("更新成功", {
-                                icon: 6
-                            }, function() {
-                                // 获得frame索引
-                                var index = parent.layer.getFrameIndex(window.name);
-                                
-							    window.parent.location.reload();//刷新父页面
-                                //关闭当前frame
-                                parent.layer.close(index);
-                            });
-                        }
-                    });
-                } else {
-                    // alert('请输入完整信息');
-                    console.log('请输入完整信息');
-                    return false;
-                }
-            });
-        });
-    };
-    </script>
-    <!-- <script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
-    </script> -->
-</body>
+					// 监听提交
+					form.on('submit(add)', function() {
+						if(isok1) {
+							$.ajax({
+								type: 'post',
+								url: 'http://localhost:3008/addAdmin/update',
+								// url: '/addAdmin/update',
+								async: true,
+								data: {
+									'username': $('#username2').val(),
+									'password': $('#L_pass2').val(),
+									'role': role,
+									'tel': $('#phone2').val(),
+									'email': $('#L_email2').val(),
+									'_id': renderdata._id
+								},
+								success: function(str) {
+									console.log(str);
+									// x_admin_show('','./admin-list.html');
+									layer.alert("更新成功", {
+										icon: 6
+									}, function() {
+										var index = parent.layer.getFrameIndex(window.name);
+										window.parent.location.reload();
+										parent.layer.close(index);
+									});
+								}
+							});
+						} else {
+							console.log('请输入完整信息');
+							return false;
+						}
+					});
+				});
+			};
+		</script>
+	</body>
 
 </html>
