--- a/src/html/welcome.html
+++ b/src/html/welcome.html
@@ -153,7 +153,7 @@
         </fieldset>
         <blockquote class="layui-elem-quote layui-quote-nm">感谢layui,百度Echarts,jquery,本系统由x-admin提供技术支持。</blockquote>
     </div>
-        <script>
+        <!-- <script>
         var _hmt = _hmt || [];
         (function() {
           var hm = document.createElement("script");
@@ -161,6 +161,6 @@
           var s = document.getElementsByTagName("script")[0]; 
           s.parentNode.insertBefore(hm, s);
         })();
-        </script>
+        </script> -->
     </body>
 </html>
