--- a/src/html/good-edit.html
+++ b/src/html/good-edit.html
@@ -118,7 +118,7 @@
 				<div class="layui-form-item">
 					<label for="L_repass" class="layui-form-label">
              </label>
-					<input type="button" class="layui-btn" id="addGood" lay-filter="add" lay-submit="" value="添加">
+					<input type="button" class="layui-btn" id="addGood" lay-filter="add" lay-submit="" value="更新">
 				</div>
 			</form>
 		</div>
