--- a/src/html/good-list.html
+++ b/src/html/good-list.html
@@ -62,13 +62,13 @@
 						<th style="width:100px;">ID</th>
 						<th>商品名称</th>
 						<th data-field="category" data-key="4-0-2" class=" layui-unselect">
-							<div class="layui-table-cell laytable-cell-4-0-2"><span>分类</span><span class="layui-table-sort layui-inline" lay-sort="asc"><i class="layui-edge layui-table-sort-asc" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div>
+							<div class="layui-table-cell laytable-cell-4-0-2"><span>分类</span><span class="layui-table-sort layui-inline"><i class="layui-edge layui-table-sort-asc rule_category1"></i><i class="layui-edge layui-table-sort-desc rule_category2"></i></span></div>
 						</th>
 						<!-- <th data-field="price" data-key="4-0-2" class=" layui-unselect"><div class="layui-table-cell laytable-cell-4-0-2"><span>原价</span><span class="layui-table-sort layui-inline" lay-sort="asc"><i class="layui-edge layui-table-sort-asc" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div></th> -->
 						<!-- <th>分类</th> -->
 						<th>原价</th>
 						<th data-field="price" data-key="4-0-2" class=" layui-unselect">
-							<div class="layui-table-cell laytable-cell-4-0-2"><span>现价</span><span class="layui-table-sort layui-inline" lay-sort="asc"><i class="layui-edge layui-table-sort-asc" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div>
+							<div class="layui-table-cell laytable-cell-4-0-2"><span>现价</span><span class="layui-table-sort layui-inline"><i class="layui-edge layui-table-sort-asc" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div>
 						</th>
 						<!-- <th>现价</th> -->
 						<th>库存</th>
