--- a/src/html/order-list.html
+++ b/src/html/order-list.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="../js/xadmin.js"></script>
+        <script type="text/javascript" src="../js/x-layui.js"></script>
      <script type="text/javascript" src="../js/orderlist.js"></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
@@ -76,7 +77,10 @@
       </div>
       <xblock>
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="x_admin_show('添加用户','./order-add.html')"><i class="layui-icon"></i>添加</button>
+
+
+ <button class="layui-btn" onclick="x_admin_show('添加用户','./order-add.html')"><i class="layui-icon"></i>添加</button>
+
         <span class="x-right" style="line-height:40px">共有数据：88 条</span>
       </xblock>
       <table class="layui-table">
@@ -140,13 +144,13 @@
       </table>
       <div class="page" style="margin-left:500px;">
         <div>
-          <a class="prev" href="" style="float:left">&lt;&lt;</a>
+          <a class="prev"  style="float:left">&lt;&lt;</a>
            <div class="pagenum" style="float:left"></div>
          <!--  <a class="num" href="">1</a>
           <span class="current">2</span>
           <a class="num" href="">3</a>
           <a class="num" href="">489</a> -->
-          <a class="next" href="" style="float:left">&gt;&gt;</a>
+          <a class="next"  style="float:left">&gt;&gt;</a>
         </div>
       </div>
 
