--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/font.css">
 	<link rel="stylesheet" href="./css/xadmin.css">
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="./lib/jquery-v3.2.1.js"></script>
+<script type="text/javascript" src="../lib/common.js"></script>
     <script src="./lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="./js/xadmin.js"></script>
+  
 
 </head>
 <body>
@@ -34,12 +35,12 @@
           </li>
         </ul>
         <ul class="layui-nav right" lay-filter="">
-          <li class="layui-nav-item">
-            <a href="javascript:;">admin</a>
+          <li class="layui-nav-item loginpage">
+            <a id="loginusername">admin</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
               <dd><a onclick="x_admin_show('个人信息','http://www.baidu.com')">个人信息</a></dd>
               <dd><a onclick="x_admin_show('切换帐号','http://www.baidu.com')">切换帐号</a></dd>
-              <dd><a href="html/login.html">退出</a></dd>
+              <dd><a  id="loginout">退出</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item to-index"><a href="/">前台首页</a></li>
@@ -289,16 +290,95 @@
     <div class="footer">
         <div class="copyright">Copyright ©2017 x-admin v2.3 All Rights Reserved</div>  
     </div>
-    <!-- 底部结束 -->
-    <script>
-    //百度统计可去掉
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-    </script>
+   
 </body>
+<script type="text/javascript"> 
+
+
+// //封装cookie函数：一个对象多重功能
+// //存: Cookie.set()
+// //取: Cookie.get()
+// //删: Cookie.remove()
+
+// var Cookie = {
+//   //设置cookie，存数据到cookie里面
+//   set: function(name, value, prop) {
+//     var str = name + '=' + value;
+//     //json(prop)存后面一些可选参数
+//     //expires:设置失效时间
+//     if(prop.expires) {
+//       str += ';expires=' + prop.expires.toUTCString(); //把时间转成字符串
+//     }
+//     //设置path路径
+//     if(prop.path) {
+//       str += ';path=' + prop.path;
+//     }
+//     //domain设置可访问cookie的域名
+//     if(prop.domain) {
+//       str += ';domain=' + prop.domain;
+//     }
+//     document.cookie = str;
+//   },
+
+//   //获取cookie数据
+//   get: function(key) {
+//     var cookies = document.cookie;
+//     // name=tiantian; age=18; usn=yuanyuan; pws=456123
+
+//     var arr = cookies.split('; ');
+//     //['name=tiantian','age=18','usn=yuanyuan','pws=456123']
+//     for(var i = 0; i < arr.length; i++) {
+//       var arr2 = arr[i].split('=');
+//       //['name','tiantian']
+//       if(key == arr2[0]) {
+//         return arr2[1];
+//       }
+//     }
+//   },
+
+//   //删除
+//   remove: function(key) {
+//     //删的原理:设置过期时间
+//     var now = new Date();
+//     now.setDate(now.getDate() - 1);
+//     //重新设置时间
+//     this.set(key, 'no', {
+//       expires: now
+//     });
+//   }
+// }
+
+
+
+ //拿到cookie里面的用户名
+     
+         // console.log(  Cookie.get("username"));
+
+
+var loginusername=document.querySelector("#loginusername");
+// var registered=document.querySelector("#registered");
+var cookie= Cookie.get("username");
+
+
+
+if(cookie){
+
+  loginusername.innerHTML=""+cookie;
+
+}else{
+ location.href='html/login.html';
+  // loginusername.innerHTML="登录" ;
+  
+}
+var loginout=document.querySelector("#loginout");
+
+loginout.onclick=function(){
+   location.href='html/login.html';
+   Cookie.remove("username");
+}
+
+
+
+
+</script>
 </html>
